--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,37 @@
+:root {
+	--theme-color_light: rgb(219, 184, 141);
+	--theme-color_dark: rgb(47, 56, 71);
+}
+
+* {
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+}
+
+a {
+	text-decoration: none;
+}
+
+#root {
+	display: flex;
+}
+
 .container {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 auto;
-    margin: 32px;
+	display: flex;
+	flex-direction: column;
+	flex: 1 1 auto;
+	padding: 32px;
+	overflow-y: auto;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
+
 .row>div {
-    margin-right: 16px;
+	margin-right: 16px;
 }
