--- a/src/components/common/Table/table.css
+++ b/src/components/common/Table/table.css
@@ -4,30 +4,81 @@ table {
 	border-collapse: collapse;
 	border-radius: 4px;
 	color: var(--theme-color_light);
+
+	display: flex;
+	flex-direction: column;
 }
 
 tbody {
-	
+	display: flex;
+	flex-direction: column;
+	overflow-y: auto;
+	flex: 1 1 100%;
+	background-color: var(--theme-background);
+}
+
+tfoot {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0.25rem;
+	border-top: 1px solid lightgray;
+	border-collapse: collapse;
+	color: var(--theme-color_dark);
 }
 
 tbody>:nth-child(even) {
 	background-color: var(--theme-color_dark);
 }
-tbody>:nth-child(odd) {
+
+/* tbody>:nth-child(odd) {
 	background-color: rgb(79, 90, 110);
-}
+} */
 
 th {
 	padding: 0.25rem;
-	border-bottom: 1px solid gray;
+	border-bottom: 2px solid gray;
 	border-collapse: collapse;
 	text-align: left;
 	font-size: 18px;
 	background-color: rgb(99, 63, 23);
+
+	display: flex;
+}
+
+tr {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
 }
 
 td {
 	padding: 0.25rem;
-	border-top: 1px solid lightgray;
+	border-bottom: 1px solid lightgray;
 	border-collapse: collapse;
+
+	display: flex;
+}
+
+.tfoot_item {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.tfoot_item>* {
+	margin: 0 8px;
+}
+
+.tfoot_pagination>* {
+	margin: 0 4px;
+}
+
+.table_no-data {
+	display: flex;
+	flex: 1 1 auto;
+	justify-content: center;
+	align-items: center;
+	font-weight: bold;
 }
